# celestia-zkevm-ibc-demo

./: .dockerignore  .env.example  .gitignore  .gitmodules  .markdownlintignore  .yamllint.yml  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  go.mod  go.sum  mnemonic.txt
.github/workflows/: docker.yml  lint.yml  test.yml
docker/: Dockerfile  celestia_prover.Dockerfile  simapp.Dockerfile
docs/: ARCHITECTURE.md
ibc/lightclients/groth16/: celestia_consts.go  changes.md  client_state.go  client_state_test.go  codec.go  consensus_state.go  consensus_state_test.go  errors.go  genesis.go  genesis_test.go  groth16.pb.go  header.go  header_test.go  integration_test.go  key.go  keys.go  light_client_module.go  light_client_module_test.go  module.go  store.go  store_test.go  update.go  update_test.go  upgrade.go  upgrade_test.go  witness.go
ibc/mpt/: database.go  mpt.go  mpt_test.go  test_helpers.go
proto/: groth16.proto
proto/ibc/lightclients/groth16/v1/: groth16.proto
proto/prover/v1/: prover.proto
provers/celestia-prover/: Cargo.toml  README.md  build.rs
provers/celestia-prover/src/: main.rs
provers/client/: prover.pb.go  prover_grpc.pb.go
provers/evm-prover/: .env.example  Cargo.toml  README.md  build.rs
provers/evm-prover/src/: main.rs
provers/rollkit-succint-prover/: Cargo.toml  README.md  build.rs
provers/rollkit-succint-prover/src/: main.rs
scripts/: protocgen.sh
simapp/: README.md  app.go  go.mod  go.sum  txclient.go  upgrades.go
simapp/simd/: main.go
simapp/simd/cmd/: cmd_test.go  root.go
testing/demo/: main.go
testing/demo/pkg/: connect.go  deploy_contracts.go  establish_transfer_channels.go  initialise_light_client.go  start.go  stop.go  transfer.go
testing/demo/pkg/setup/: initialise_groth16_client.go  initialise_sp1tm_client.go  main.go
testing/demo/pkg/setup-env/: setup-env.go
testing/demo/pkg/test/: initialise_groth16_client.go  initialise_light_client.go  main.go
testing/demo/pkg/transfer/: main.go
testing/demo/pkg/utils/: utils.go
testing/files/: da_auth_token  entrypoint-docker.sh  entrypoint.sh  eth-genesis.json
testing/files/celestia-bridge/: entrypoint.sh
testing/files/celestia-bridge/keys/: NJ3XILLTMVRXEZLUFZVHO5A  OAZHALLLMV4Q
testing/files/celestia-bridge/keys/config/: config.toml
testing/files/celestia-bridge/keys/keyring-test/: bridge.info  my_celes_key.info
testing/files/celestia-validator/: entrypoint.sh
testing/files/celestia-validator/config/: app.toml  config.toml  genesis.json  node_key.json  priv_validator_key.json
testing/files/celestia-validator/config/gentx/: gentx-ae4cea4cfb7d7183829bde816683acd1e823b279.json
testing/files/celestia-validator/keyring-test/: validator.info
testing/files/simapp-validator/: entrypoint.sh
testing/files/simapp-validator/config/: app.toml  client.toml  config.toml  genesis.json  node_key.json  priv_validator_key.json
testing/files/simapp-validator/config/gentx/: gentx-0afca0da340901a41d73e54fcb32057b78e6a256.json  gentx-1f828b0ebaff1dfbb09198bba2d3d5053df05da0.json  gentx-6bc391a2ca7dd89869961e3ac9b3d16e693bb67e.json
testing/files/simapp-validator/keyring-test/: relayer.info  validator.info
x/header/: README.md  keeper.go  module.go  params.go
