[package]
name = "celestia-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tonic-reflection = "0.10"
tendermint-rpc = "0.40.0"
ibc-client-tendermint-types = "0.56.0"

[build-dependencies]
tonic-build = "0.10"
